--- a/sections/section3.tex
+++ b/sections/section3.tex
@@ -101,8 +101,8 @@ Neutrino-argon interactions are simulated with the GENIE neutrino event generato
     NonRESBGvbarnNC2pi & Scale factor for non-resonant $\bar{\nu}$-$n$ NC 2$\pi$ background  & 0.01 \\
     RDecBR1gamma & Scale factor for $X$ + 1$\gamma$ branching fraction & 0.15 \\
     RDecBR1eta & Scale factor for $X$ + 1$\eta$ branching fraction & 2.75 \\
-    NormCCCoh & text & 0.10 \\
-    NormNCCoh & text & 0.00 \\
+    NormCCCoh & Scale factor for CC coherent pion production & 0.10 \\
+    NormNCCoh & Scale factor for NC coherent pion production & 0.00 \\
     \hline
     Total & & 7.32 \\
     \hline
@@ -158,8 +158,27 @@ The reconstructed observables chosen for this analysis are shown in Figure \ref{
         {\includegraphics[width=0.50\textwidth]{reco_pi0_momentum_mag_syst.pdf} \label{subfig:reco_pi0_momentum_mag_syst}}   
     \subfloat[Neutral pion angle to neutrino beam]
         {\includegraphics[width=0.50\textwidth]{reco_pi0_beam_costheta_syst.pdf} \label{subfig:reco_pi0_beam_costheta_syst}}          
-    \caption{Observables chosen for analysis}
+    \caption{Observables chosen for analysis with full systematic uncertainty assessment}
     \label{fig:reco_observables_syst}
+\end{figure}
+
+\begin{figure}[H]
+    \center
+    \includegraphics[width=0.90\textwidth]{reco_pi0_mass_syst.pdf}
+    \caption[text]{Neutral pion invariant mass with full systematic error assessment}
+    \label{fig:reco_pi0_mass_syst}
+\end{figure}
+
+\begin{figure}[H]
+    \center
+    \subfloat[Transverse momentum imbalance]
+        {\includegraphics[width=0.50\textwidth]{reco_dpT_syst.pdf} \label{subfig:reco_dpT_syst}} \\
+    %\subfloat[Transverse opening angle]
+    %    {\includegraphics[width=0.50\textwidth]{reco_dphiT_syst.pdf} \label{subfig:reco_dphiT_syst}} \\
+    \subfloat[Transverse boosting angle] 
+        {\includegraphics[width=0.50\textwidth]{reco_dalphaT_syst.pdf}} \label{subfig:reco_dalphaT_syst}
+    \caption{Kinematic imbalance observables with full systematic uncertainty assessment}
+    \label{fig:tki_observables_syst}
 \end{figure}
 
 \begin{table}[H]
